added styling star to vgs index + other minor changes

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -26,6 +26,7 @@
 			height: 140px;
 			overflow: auto;
 			padding: 2px;
+			border-radius: 10px;
 		}
 
 		.gaminglog {
@@ -38,14 +39,14 @@
 			padding-left: 2px;
 			margin-bottom: 10px;
 		}
-
 	</style>
 </head>
 
 <body>
 	<div id="iframepc">
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
-		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! spoilers will be <span class="spoiler">hidden!</span></p>
+		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! i grew up playing video games so yeah i have quite a history with them.
+		<p>spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
 		<hr>
@@ -53,43 +54,16 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>03.sep.24: added: <a href="style-savvy-styling-star/index.html">style savvy styling star</a></li>
 			<li>30.aug.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a> + added: <a href="nintendogs-cats/index.html">nintendogs + cats</a></li>
 			<li>13.aug.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
 			<li>24.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
-			<li>16.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
-			<li>15.jul.24: log: <a href="cato/index.html">cato</a></li>
-			<li>14.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
-			<li>09.jul.24: added: <a href="cato/index.html">cato: buttered cat</a></li>
-			<li>03.jul.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
-			<li>19.jun.24: log: <a href="sonic-rush/index.html">sonic rush</a>
-			<li>17.jun.24: screenshots: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
-			<li>09.jun.24: added: <a href="sonic-rush/index.html">sonic rush</a></li>
-			<li>05.jun.24: added <a href="style-savvy-trendsetters/index.html">style savvy: trendsetters</a></li>
-			<li>24.may.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
-			<li>22.may.24 - log: <a href="fallout-new-vegas/index.html">new vegas</a> + <small>from now on i'm gonna start logs from newest to oldest!</small></li>
-			<li>20.may.24 - log: <a href="fallout-1/index.html">fallout</a></li>
-			<li>17.apr.24 - log: <a href="fallout-1/index.html">fallout</a></li>
-			<li>14.apr.24 - added: <a href="botw/index.html">breath of the wild</a>, <a href="cattails/index.html">cattails</a>, <a href="gris/index.html">gris</a>, <a href="hollow-knight/index.html">hollow knight</a>, <a href="milk-inside/index.html">milk inside a bag of milk</a>, <a href="rental/index.html">rental</a>, <a href="splatoon-2/index.html">splatoon 2</a></li>
-			<li>12.apr.24 - added: <a href="fallout-1/index.html">fallout</a>, <a href="fallout-new-vegas/index.html">fallout new vegas</a> <small>i just finished watching the fallout show, can you tell?</small>, <a href="cloud-gardens/index.html">cloud gardens</a></li>
-			<li>21.mar.24 - added: <a href="paranormasight/index.html">paranormasight</a> / log: <a href="prsk/index.html">project sekai</a></li>
-			<li>11.dec.23 - log: <a href="fortnite/index.html#1">fortnite</a>, <a href="bloodborne/index.html#7">bloodborne</a></li>
-			<li>28.nov.23 - updated <a href="fashion-dreamer/index.html">fashion dreamer</a></li>
-			<li>23.nov.23 - updated <a href="fortnite/index.html">fortnite</a> page so now each skin has their own screenshot set :) more organized this way YAY!</li>
-			<li>03.nov.23 - log: <a href="/vgs/fashion-dreamer">fashion dreamer</a></li>
-			<li>14.oct.23 - added: <a href="/vgs/sticky-business">sticky business</a></li>
-			<li>09.oct.23 - log: <a href="/vgs/fashion-dreamer">fashion dreamer</a></li>
-			<li>04.sep.23 - log: <a href="/vgs/bloodborne#5">bloodborne</a>, screenshots: <a href="/vgs/needy-streamer">needy streamer overload</a></li>
-			<li>13.aug.23 - added <a href="/vgs/minecraft">minecraft</a></li>
-			<li>06.aug.23 - added <a href="/vgs/dog-island">the dog island</a>, <a href="/vgs/pikmin-4">pikmin 4</a>, updated <a href="/vgs/fashion-dreamer">fashion dreamer</a></li>
-			<li>23.jul.23 - updated <a href="/vgs/bloodborne">bloodborne</a></li>
-			<li>14.jul.23 - added <a href="/vgs/prsk">project sekai</a></li>
 		</div>
 		<hr>
-		<h3>my gaming lore</h3>
-		<p>i pretty much grew up playing video games :3 i'd write more in here but i don't got much else to say at the moment. video games fun.</p>
-		<p><b>consoles i've had:</b> <s title="i don't remember what happened but it broke in the middle. maybe i let it fell...">DS lite</s>, <s title="the ring of death or whatever">xbox 360</s>, <s title="gave it to my cousin when i got a 3DS">DSi</s>, <s title="i think we sold this...">wii</s>, 3DS, wii u, <s title="i think i just need to buy a wired controller so i can be able to play it again LOL">PS4</s>, switch lite</p>
-		<p>honorable mention to my poor non-gamer laptops i've had to run games that weren't meant to be played in them.</p>
-		<p>which btw, feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank">steam</a>!</p>
+		<h3>pages / links</h3>
+		<p><s>consoles</s> - wip</p>
+		<p><s>video games spreadsheet</s> - wip</p>
+		<p>feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank">steam</a> but do leave me a message as to who you are!</p>
 
 		<hr>
 
