--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -207,10 +207,10 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv single sim finished fav">
-			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.JPG" tabindex="0"></a>
+			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.png" tabindex="0"></a>
 		</div>
 		<div class="filterDiv single sim current notdone">
-			<a title="style savvy: styling star" href="style-savvy-styling-star/index.html" target="iframe_a"><img src="" alt="style savvy styling star" tabindex="0"></a>
+			<a title="style savvy: styling star" href="style-savvy-styling-star/index.html" target="iframe_a"><img src="style-savvy-styling-star/cover.png" alt="style savvy styling star" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished single puzzle">
 			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking/cover.jpg" tabindex="0"></a>
@@ -274,54 +274,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 	<div id="home">
 		<a title="go back home" href="/"><img src="/!g/deco/enderspin.gif" width="auto"></a>
 	</div>
-	<script>
-		filterSelection("all")
-
-		function filterSelection(c) {
-			var x, i;
-			x = document.getElementsByClassName("filterDiv");
-			if (c == "all") c = "";
-			// Add the "show" class (display:block) to the filtered elements, and remove the "show" class from the elements that are not selected
-			for (i = 0; i < x.length; i++) {
-				w3RemoveClass(x[i], "show");
-				if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-			}
-		}
-		// Show filtered elements
-		function w3AddClass(element, name) {
-			var i, arr1, arr2;
-			arr1 = element.className.split(" ");
-			arr2 = name.split(" ");
-			for (i = 0; i < arr2.length; i++) {
-				if (arr1.indexOf(arr2[i]) == -1) {
-					element.className += " " + arr2[i];
-				}
-			}
-		}
-		// Hide elements that are not selected
-		function w3RemoveClass(element, name) {
-			var i, arr1, arr2;
-			arr1 = element.className.split(" ");
-			arr2 = name.split(" ");
-			for (i = 0; i < arr2.length; i++) {
-				while (arr1.indexOf(arr2[i]) > -1) {
-					arr1.splice(arr1.indexOf(arr2[i]), 1);
-				}
-			}
-			element.className = arr1.join(" ");
-		}
-		// Add active class to the current control button (highlight it)
-		var btnContainer = document.getElementById("myBtnContainer");
-		var btns = btnContainer.getElementsByClassName("btn");
-		for (var i = 0; i < btns.length; i++) {
-			btns[i].addEventListener("click", function () {
-				var current = document.getElementsByClassName("active");
-				current[0].className = current[0].className.replace(" active", "");
-				this.className += " active";
-			});
-		}
-
-	</script>
+	<script src="filter.js"></script>
 </body>
 
 </html>
