minor fixes and changes

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -37,7 +37,7 @@ v3 of journal started on 05.jul.24
 			<div id="desc">
 				<img align="left" src="!g/welcome.gif" width="50%" style="margin:10px;">
 				<h3>welcome to des' journal logs!</h3>
-				<p>in here i will be talking about my life, site stuff, and other misc things. logs are from newest to oldest. updated every month <small>if i write something!</small></p>
+				<p>in here i will be talking about my life, site stuff, and other misc things.</p>
 			</div>
 
 			<div id="calendar">
