--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -51,7 +51,7 @@
 				<a href="/music/fav-albums.html" target="_parent">albums</a>
 				<br />
 				↳
-				<a href="/music/artists-genres.html" target="_parent">artists &amp; genres</a>
+				<a href="/music/songs/index.html" target="_parent">artists &amp; genres</a>
 				<br />
 				↳
 				<a href="/music/kpop-producers.html" target="_parent">k-pop producers</a>
@@ -70,9 +70,6 @@
 				<br />
 				↳
 				<a href="/music/recaps/index.html" target="_parent">yearly recaps</a>
-				<br />
-				↳
-				<a href="/music/strobe-light.html" target="_parent">strobe light secret page</a>
 			</ul>
 			<li><a href="/shrines" target="_parent">shrines</a></li>
 			<ul>
