some css and index changes to gaming log

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -38,7 +38,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<!-- this is info for small screen-->
 		<div id="back">
-			<a href="info.html" target="iframe_a">go back to info page</a>
+			<a href="info.html" target="iframe_a">back to info</a> / <a href="/">homepage</a> / <a href="/sitemap.html">sitemap</a>
 		</div>
 	</div>
 	<!-- main box -->
@@ -270,9 +270,8 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 -->
 		<!-- 	wrapper end div -->
 	</div>
-	<div id="drifter"><a title="my meow meow drifter" href="hld/index.html" target="iframe_a"><img src="/!g/deco/drifter.png" width="300px"></a></div>
 	<div id="home">
-		<a title="go back home" href="/"><img src="/!g/deco/enderspin.gif" width="auto"></a>
+		<a title="go back home" href="/"><img src="/!g/deco/enderspin.gif" width="auto" alt="go back home"></a>
 	</div>
 	<script src="filter.js"></script>
 </body>
