--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -44,14 +44,13 @@
 
 <body>
 	<div id="iframepc">
+		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
-		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! i grew up playing video games so yeah i have quite a history with them.
+		<p>these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! i grew up playing video games so yeah i have quite a history with them.
 		<p>spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
-		<hr>
-
-		<h3>change log</h3>
+		<h2>change log</h2>
 
 		<div id="log">
 			<li>03.sep.24: added: <a href="style-savvy-styling-star/index.html">style savvy styling star</a></li>
@@ -59,13 +58,12 @@
 			<li>13.aug.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
 			<li>24.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
 		</div>
-		<hr>
-		<h3>pages / links</h3>
+
+		<h2>pages / links</h2>
 		<p><s>consoles</s> - wip</p>
 		<p><s>video games spreadsheet</s> - wip</p>
 		<p>feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank">steam</a> but do leave me a message as to who you are!</p>
 
-		<hr>
 
 		<h3>credit</h3>
 		<p>heading <a href="/notebook/links/fonts.html" target="_blank">font</a> is yoster / filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a></p>
