--- a/doqmeat/vgs/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/style-savvy-styling-star/index.html
@@ -46,7 +46,7 @@
 		<div class="info"><b>genre/type: </b> fashion, simulator</div>
 
 		<h3>logs</h3>
-		<p><span class="date">03.sep.24</span> started playing this right when i finished playing <a href="../style-savvy-trendsetters/index.html">trendsetters</a>. i asked on my privite twitter if i should play <i>styling star</i> or <i>fashion forward</i> next and my only oomf who has played the style savvy games voted for <i>styling star</i> so!!! here i am.</p>
+		<p><span class="date">03.sep.24</span> started playing this right when i finished playing <a href="../style-savvy-trendsetters/index.html">trendsetters</a>. i asked on my private twitter if i should play <i>styling star</i> or <i>fashion forward</i> next and my only oomf who has played the style savvy games voted for <i>styling star</i> so!!! here i am.</p>
 		<p>first thing i noticed about the game is that there is no 3D option <small>unless my game is bugged but? i don't think that's it.</small> and taking a look at the release date being in 2017 then yeah that makes a LOT of sense, since i know nintendo was barely pushing the 3D gimmick of the 3DS at that time. i don't think i've made it pass the tutorial of the game, but once i have a few more minutes with the game i'll come back to this to write some more of my thoughts.</p>
 	</main>
 	<footer>
