--- a/doqmeat/projects/learning-js/index.html
+++ b/doqmeat/projects/learning-js/index.html
@@ -22,7 +22,6 @@
 		nav {
 			text-align: left;
 		}
-
 	</style>
 </head>
 
@@ -33,9 +32,11 @@
 
 		<h2>navigation</h2>
 		<nav>
-			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="smarter-way-js.html">a smarter way to learn JS</a> - taking notes as i read through it.
-			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG
-			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="practice.html">practice page</a> - where i put what i've learned into practice.
+			<ul>
+				<li><a href="smarter-way-js.html">a smarter way to learn JS</a> - taking notes as i read through it.</li>
+				<li><a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG</li>
+				<li><a href="practice.html">practice page</a> - where i put what i've learned into practice.</li>
+			</ul>
 		</nav>
 
 		<h2>JS to-do list</h2>
