added tooltip to img

--- a/doqmeat/vgs/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/style-savvy-styling-star/index.html
@@ -39,7 +39,7 @@
 <body>
 	<main>
 		<h2>style savvy styling star</h2>
-		<img src="js-boxart.png" alt="japanese box art" width="40%" class="cover">
+		<img title="japanese box art for style savvy styling star" src="js-boxart.png" alt="japanese box art" width="40%" class="cover">
 		<div class="info"><b>status: </b> currently</div>
 		<div class="info"><b>release date: </b> 2 november 2017</div>
 		<div class="info"><b>developer: </b> syn sophia</div>
