--- a/doqmeat/notebook/links/fonts.html
+++ b/doqmeat/notebook/links/fonts.html
@@ -23,7 +23,6 @@
 		p.font a {
 			font-weight: normal;
 		}
-
 	</style>
 </head>
 
@@ -37,6 +36,12 @@
 		</center>
 
 		<p>here's some fonts with links that i've used, or i'm planning to use on my site!</p>
+
+		<!-- font template 
+<p class="font" style="font-family:x;font-size:19px;"><a href="" target="_blank" >x</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
+-->
+
+		<p class="font" style="font-family:mononoki;font-size:15px;"><a href="https://madmalik.github.io/mononoki/" target="_blank">mononoki</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:basiic;font-size:19px;"><a title="cred to cinni!" href="https://cinni.net/?z=/font" target="_blank">basiic by cinni</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
@@ -101,10 +106,6 @@
 		<p class="font" style="font-family:momo;font-size:19px;"><a href="https://twitter.com/momodraws/status/1783568797950935295" target="_blank">momo's regular</a> by momodraws<br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:small-pixel;font-size:15px;"><a href="https://fonts2u.com/04b-24.font" target="_blank">04b_24</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
-
-		<!-- font template 
-<p class="font" style="font-family:x;font-size:19px;"><a href="" target="_blank" >x</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
--->
 
 	</div>
 </body>
