added new fanlistings and a new kitty

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -269,9 +269,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 					<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px"></object>
 				</p>
 			</div>
+
+			<!-- fanlistings -->
 			<div id="listing" class="comm-box">
-				<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
-				<br>
+				<a href="https://coool.neocities.org/soullady/" target="_blank"><img src="!g/web/fanlisting/yukika.png" alt="yukika"></a>
+
 				<a href="https://fanlistings.melankorin.net/vocaloid/" target="_blank"><img src="!g/web/fanlisting/vocaloid.png" alt="vocaloid fanlisting"></a>
 
 				<a href="https://theatregirl.net/cats/" target="_blank"><img src="!g/web/fanlisting/cats.png" alt="cats"></a>
@@ -316,6 +318,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting/88x31kuromi.png" alt="cafe rose banner"></a>
 
 				<br>
+				<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
+				<a href="https://newtopia.neocities.org/" target="_blank"><img src="!g/web/fanlisting/loossemble.png" alt="loossemble"></a>
 				<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting/nso.png" alt="needy streamer overdose fanlisting" style="max-width: 100%"></a>
 
 				<br>
@@ -333,6 +337,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				<a href="https://mikufan3939.neocities.org" target="_blank"><img title="by meek!" src="/!g/web/cliques/kitty-friends/mikucat.png" alt="mikucat"></a>
 				<a href="https://jeith.neocities.org" target="_blank"><img title="by jeith!" src="!g/web/cliques/kitty-friends/jeith.gif" alt="jeithcat"></a>
 				<a title="by lina!" href="https://amalinalai.github.io/precipice/" target="_blank"><img src="!g/web/cliques/kitty-friends/lina.gif" alt="lina's cat"></a>
+				<a title="by artwork!" href="https://artwork.neocities.org" target="_blank"><img src="!g/web/cliques/kitty-friends/artwork.gif" alt="artwork's kitty"></a>
 			</div>
 
 			<div id="misc" class="comm-box">
