--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -5,7 +5,7 @@ coded with love by des!
 -
 homepage v4 started on 01.aug.24 / finished on 09.aug.24
 -
-feel free to look around for any help you need :) just don't be THAT person and take the entire code for your site... you're free to take bits of my code but pls let me know before hand! i might be able to help you out :-)
+feel free to look around for any help you need :) just don't be THAT person and take the entire code for your site... you're free to take bits of my code tho.
  -->
 
 <head>
@@ -125,10 +125,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> style savvy styling star</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> grace and frankie + joe pera talks with you</p>
+			<p><span class="hl">watching:</span> grace and frankie</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> reworking some pages around site!</p>
-			<p class="date">last updated on 03.sep.24</p>
+			<p class="date">last updated on 05.sep.24</p>
 
 		</div>
 
