new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -33,7 +33,9 @@
 			<!-- <article>
 				<p><b></b> </p>
 			</article> -->
-
+			<article id="240906">
+				<p><b>06.sep.24 - 12pm</b> thank you to my neighbor for giving me her wifi password <img src="/!g/pix/emote1lov.gif" alt=""> now doing web stuff won't be as annoying.</p>
+			</article>
 			<article id="240830">
 				<p><b>30.aug.24 - 3pm</b> - just added a new featured song n album to my <a href="/music">music</a> page! i really miss doing those in-depth <small>or at least somewhat</small> logs of new albums and EPs i'd listen to for my <a href="/music/listening-log/index.html">listening log</a> :( there's a lot of things i'm not able to spend that much time on because you know. i have a life now. but listening to new music and being able to extensively talk about it is something that i really miss from my days of unlimited free time. i also wish it didn't take me so long to write coherent paragraphs. i'm very insecure about my writing. <img src="/!g/pix/emote1emba.gif"></p>
 			</article>
