updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -174,7 +174,7 @@
 			</a>
 			<a href="https://hazure03.neocities.org" target="_blank"><img src="!g/hazure03.gif" alt="hazure03"></a>
 			<a href="https://amalinalai.github.io/precipice/"><img src="!g/lina.gif" title="click to visit lina's home!" alt="lina's home!"></a>
-
+			<a href="https://skewbug.neocities.org/" target="_blank"><img src="!g/skewbug.gif" alt="skewbug"></a>
 		</div>
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
@@ -266,6 +266,7 @@
 			<a title="whiona" href="https://whiona.me/" target="_blank"><img src="!g/whiona.png" alt="whiona"></a>
 			<a title="leilukin" href="https://leilukin.com/" target="_blank"><img src="!g/Leilukin.png" alt="leilukin"></a>
 			<a title="april" href="https://april.lexiqqq.com/" target="_blank"><img src="!g/april.gif" alt="april"></a>
+			<a href="https://pixalina.neocities.org/" target="_blank"><img src="!g/pixalina.gif" alt="pixalina"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
