added viewport to cat + IT RELEASED YESTERDAYgit statusgit status

--- a/doqmeat/vgs/cato/index.html
+++ b/doqmeat/vgs/cato/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>cato</title>
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
 	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
@@ -20,7 +21,7 @@
 	<main>
 		<h2>cato: buttered cat</h2>
 		<img width="30%" class="cover" src="cover.jpg" alt="a black and white cat with a butter toast on top of it">
-		<div class="info"><b>release date: </b> TBA</div>
+		<div class="info"><b>release date: </b> 5 september 2024</div>
 		<div class="info"><b>developer: </b> Team Woll</div>
 		<div class="info"><b>genre/type: </b>platformer, CAT</div>
 		<div class="info"><b>link: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a>, <a href="https://twitter.com/Cato_TeamWoll" target="_blank">twitter</a></div>
