--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="/!g/pix/catidea.gif">
 	<title>microblog</title>
 	<link href="index.css" rel="stylesheet" />
+	<link href="/fonts/stylesheet.css" rel="stylesheet">
 	<!--	tooltip shit-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -33,6 +34,10 @@
 			<!-- <article>
 				<p><b></b> </p>
 			</article> -->
+			<article>
+				<p><b>06.sep.24 - 2pm</b> i'm so excited to play <a href="/vgs/cato/index.html">cato</a> !!! <button onclick="showPic('!g/240906-cato.png','cato downloading on steam','ive already played 2 demos for this games and i loved them so much! im super hyped')">240906-cato.png'</button></p>
+			</article>
+
 			<article id="240906">
 				<p><b>06.sep.24 - 12pm</b> thank you to my neighbor for giving me her wifi password <img src="/!g/pix/emote1lov.gif" alt=""> now doing web stuff won't be as annoying.</p>
 			</article>
