updated cat collection + homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -127,8 +127,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> grace and frankie</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> reworking some pages around site!</p>
-			<p class="date">last updated on 05.sep.24</p>
+			<p><span class="hl">working on:</span> remaking music page</p>
+			<p class="date">last updated on 06.sep.24</p>
 
 		</div>
 
@@ -139,7 +139,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats" title="click to see more freaks"><img src="collection/cats/!g/smile.jpg" alt="featured cat" width="90%"></a>
+			<a href="/collection/cats" title="click to see more freaks"><img src="collection/cats/!g/violence.jpg" alt="featured cat" width="90%"></a>
 		</div>
 
 
