--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -26,7 +26,7 @@
 		<div class="column">
 			<video controls>
 				<source src="!g/the-blinker.mp4" type="video/mp4">
-				your browser does not support the video tag.
+				your browser does not support the video tag :(
 			</video>
 			<img src="!g/buenos-dias.jpg">
 			<img src="!g/cathug.jpg">
@@ -61,6 +61,7 @@
 
 		<!--column 2-->
 		<div class="column">
+			<img src="!g/violence.jpg" alt="violent kitties">
 			<img src="!g/smile.jpg" alt="soft smile cat">
 			<img src="!g/explode.jpg">
 			<img src="!g/hesallin.jpg">
@@ -135,9 +136,9 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 09.aug.24</b>
-		<br>
-		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw
+		<b>last updated: 06.sep.24</b>
+		<br><br>
+		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw, momo
 
 		<br>
 
