changed color theme of listening logs

--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -22,7 +22,6 @@
 		h4 {
 			text-align: left;
 		}
-
 	</style>
 </head>
 
@@ -31,7 +30,8 @@
 		<h2>listening logs</h2>
 		<p>thoughts n highlights of stuff i listen to! i try my best to be as detailed <small>and coherent</small> as possible in these. these are usually first listens unless stated otherwise. you can see more activity @ my <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM page</a> since i'm a bit busier now to do these!</p>
 		<h3>pages</h3>
-		<p>these will open on their own tab!</p>
+		<p>these will open on their own tab! body bg pic by <a href="https://unsplash.com/@juanster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Juan Davila</a> on <a href="https://unsplash.com/photos/lake-under-blue-sky-during-daytime-P8PlK2nGwqA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+
 		<h4>2024</h4>
 		<a href="2024/summer.html" target="_parent">summer</a>
 		<a href="2024/spring.html" target="_parent">spring</a>
