music minor changes

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -15,6 +15,10 @@
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://melonking.net/scripts/frame-link.js"></script>
+	<script>
+		titlePrefix = "music - ";
+
+	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
