--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -16,13 +16,19 @@
 	<style>
 		body {
 			background-image: url(bg.png);
+			background-attachment: fixed;
+			background-position: right;
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
 		}
 
 		main,
 		footer {
 			background: #f8f2df;
 		}
-
 	</style>
 </head>
 
