--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -39,7 +39,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 			<img src="/!g/div/balloon.gif">
 		</div>
 		<div id="info">
-			<iframe id="mainframe" src="info.html" name="iframe_a" height="500px" width="100%" style="border:none;"></iframe>
+			<iframe id="mainframe" src="info.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
 		</div>
 		<!-- this is info for small screen-->
 		<div id="back">
@@ -57,8 +57,6 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 				<button class="btn" onclick="filterSelection('finished')">finished</button>
 				<button class="btn" onclick="filterSelection('notdone')">not finished</button>
 				<div>
-					<button class="btn g" onclick="filterSelection('single')"> single-player</button>
-					<button class="btn g" onclick="filterSelection('multi')"> multi-player</button>
 					<button class="btn g" onclick="filterSelection('horror')">horror</button>
 					<button class="btn g" onclick="filterSelection('adv')">adventure</button>
 					<button class="btn g" onclick="filterSelection('action')">action</button>
@@ -74,198 +72,198 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 			</center>
 		</div>
 
-		<div class="filterDiv finished adv single">
+		<div class="filterDiv finished adv">
 			<a title="abzu" href="abzu/index.html" target="iframe_a"><img src="abzu/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished sim">
 			<a title="animal crossing new horizons" href="acnh/index.html" target="iframe_a"><img src="acnh/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone cat puzzle single">
+		<div class="filterDiv notdone cat puzzle">
 			<a title="a little to the left" href="a-little-to-the-left/index.html" target="iframe_a"><img src="a-little-to-the-left/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished vn single">
+		<div class="filterDiv finished vn">
 			<a title="a new life" href="a-new-life/index.html" target="iframe_a"><img src="a-new-life/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished action single adv">
+		<div class="filterDiv finished action adv">
 			<a title="bastion" href="bastion/index.html" target="iframe_a"><img src="bastion/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv toplay action single">
+		<div class="filterDiv toplay action">
 			<a title="bayonetta origins: cereza and the lost demon" href="bayonetta-origins/index.html" target="iframe_a"><img src="bayonetta-origins/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv adv action notdone horror single">
+		<div class="filterDiv adv action notdone horror">
 			<a title="bloodborne" href="bloodborne/index.html" target="iframe_a"><img src="bloodborne/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv">
 			<a title="breath of the wild" href="botw/index.html" target="iframe_a"><img src="botw/cover.jpg" tabindex="0" alt="botw"></a>
 		</div>
-		<div class="filterDiv fav finished adv platformer single">
+		<div class="filterDiv fav finished adv platformer">
 			<a title="bound" href="bound/index.html" target="iframe_a"><img src="bound/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished adv single">
+		<div class="filterDiv fav finished adv">
 			<a title="bugsnax" href="bugsnax/index.html" target="iframe_a"><img src="bugsnax/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv single cat platformer toplay">
+		<div class="filterDiv cat platformer currently puzzle">
 			<a title="cato: buttered cat" href="cato/index.html" target="iframe_a"><img src="cato/cover.jpg" alt="cato" tabindex="0"></a>
 		</div>
-		<div class="filterDiv cat single rpg adventure">
+		<div class="filterDiv cat rpg adventure">
 			<a title="cattails" href="cattails/index.html" target="iframe_a"><img src="cattails/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished platformer single">
+		<div class="filterDiv fav finished platformer">
 			<a title="celeste" href="celeste/index.html" target="iframe_a"><img src="celeste/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished single puzzle">
+		<div class="filterDiv fav finished puzzle">
 			<a title="cloud gardens" href="cloud-gardens/index.html" target="iframe_a"><img src="cloud-gardens/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished rpg single">
+		<div class="filterDiv finished rpg">
 			<a title="dragon age inquisition" href="dai/index.html" target="iframe_a"><img src="dai/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv currently notdone single adventure">
+		<div class="filterDiv currently notdone adventure">
 			<a title="the dog island" href="dog-island/index.html" target="iframe_a"><img src="dog-island/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished fav single rpg action">
+		<div class="filterDiv finished fav rpg action">
 			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
 		</div>
-		<div class="filterDiv currently notdone single action shooter rpg">
+		<div class="filterDiv currently notdone action shooter rpg">
 			<a title="fallout new vegas" href="fallout-new-vegas/index.html" target="iframe_a"><img src="fallout-new-vegas/cover.jpg" tabindex="0" alt="fallout new vegas"></a>
 		</div>
-		<div class="filterDiv fav action finished single">
+		<div class="filterDiv fav action finished">
 			<a title="fallout 4" href="fallout-4/index.html" target="iframe_a"><img src="fallout-4/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished sim single">
+		<div class="filterDiv finished sim">
 			<a title="fashion dreamer" href="fashion-dreamer/index.html" target="iframe_a"><img src="fashion-dreamer/cover1.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv horror adventure">
 			<a title="fatum betula" href="fatum-betula/index.html" target="iframe_a"><img src="fatum-betula/cover.jpg" tabindex="0" alt="fatum betula"></a>
 		</div>
-		<div class="filterDiv action multi">
+		<div class="filterDiv action">
 			<a title="fortnite" href="fortnite/index.html" target="iframe_a"><img src="fortnite/fortnite.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished single adventure plat">
+		<div class="filterDiv fav finished adventure plat">
 			<a title="gris" href="gris/index.html" target="iframe_a"><img src="gris/cover.jpg" tabindex="0" alt="gris"></a>
 		</div>
-		<div class="filterDiv fav finished action single">
+		<div class="filterDiv fav finished action">
 			<a title="hyper light drifer" href="hld/index.html" target="iframe_a"><img src="hld/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished single adventure plat action">
+		<div class="filterDiv fav finished adventure plat action">
 			<a title="hollow knight" href="hollow-knight/index.html" target="iframe_a"><img src="hollow-knight/cover.jpg" tabindex="0" alt="hollow knight"></a>
 		</div>
-		<div class="filterDiv fav finished vn single">
+		<div class="filterDiv fav finished vn">
 			<a title="if found..." href="if-found/index.html" target="iframe_a"><img src="if-found/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished action single">
+		<div class="filterDiv finished action">
 			<a title="infamous second son" href="infamous-2nd-son/index.html" target="iframe_a"><img src="infamous-2nd-son/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv toplay single">
+		<div class="filterDiv toplay">
 			<a title="jet set radio" href="jet-set-radio/index.html" target="iframe_a"><img src="jet-set-radio/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv cat fav adv finished single">
+		<div class="filterDiv cat fav adv finished">
 			<a title="journey" href="journey/index.html" target="iframe_a"><img src="journey/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished vn single horror">
+		<div class="filterDiv finished vn horror">
 			<a title="milk inside a bag of milk inside a bag of milk" href="milk-inside/index.html" target="iframe_a"><img src="milk-inside/cover.jpg" tabindex="0" alt="milk inside a bag of milk inside a bag of milk"></a>
 		</div>
-		<div class="filterDiv fav notdone multi single">
+		<div class="filterDiv fav notdone">
 			<a title="minecraft" href="minecraft/index.html" target="iframe_a"><img src="minecraft/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished vn single">
+		<div class="filterDiv finished vn">
 			<a title="needy streamer overload" href="needy-streamer/index.html" target="iframe_a"><img src="needy-streamer/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv single cat adv toplay"><a href="neko-odyssey" title="neko odyssey" target="iframe_a"><img src="neko-odyssey/cover.jpg" alt="neko odyssey" tabindex="0"></a></div>
-		<div class="filterDiv fav finished cat single">
+		<div class="filterDiv cat adv toplay"><a href="neko-odyssey" title="neko odyssey" target="iframe_a"><img src="neko-odyssey/cover.jpg" alt="neko odyssey" tabindex="0"></a></div>
+		<div class="filterDiv fav finished cat">
 			<a title="night in the woods" href="nitw/index.html" target="iframe_a"><img src="nitw/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv single sim finished">
+		<div class="filterDiv sim finished">
 			<a title="nintendogs + cats" href="nintendogs-cats/index.html" target="iframe_a"><img src="nintendogs-cats/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv currently notdone vn single horror">
+		<div class="filterDiv currently notdone vn horror">
 			<a title="paranormasight" href="paranormasight/index.html" target="iframe_a"><img src="paranormasight/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished adventure single">
+		<div class="filterDiv finished adventure">
 			<a title="pikmin 4" href="pikmin-4/index.html" target="iframe_a"><img src="pikmin-4/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished single">
+		<div class="filterDiv fav finished">
 			<a title="portal 2" href="portal-2/index.html" target="iframe_a"><img src="portal-2/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv rhythm vn">
 			<a title="project sekai" href="prsk/index.html" target="iframe_a"><img src="prsk/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished horror adventure single">
+		<div class="filterDiv finished horror adventure">
 			<a title="rental" href="rental/index.html" target="iframe_a"><img src="rental/cover.jpg" tabindex="0" alt="rental"></a>
 		</div>
-		<div class="filterDiv fav finished action adv single">
+		<div class="filterDiv fav finished action adv">
 			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solar-ash/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav notdone platformer">
 			<a title="sonic rush" href="sonic-rush/index.html" target="iframe_a"><img src="sonic-rush/cover.png" tabindex="0"></a>
 		</div>
-		<div class="filterDiv multi shooter notdone">
+		<div class="filterDiv shooter notdone">
 			<a title="splatoon 2" href="splatoon-2/index.html" target="iframe_a"><img src="splatoon-2/cover.jpg" tabindex="0" alt="splatoon 2"></a>
 		</div>
-		<div class="filterDiv finished sim single">
+		<div class="filterDiv finished sim">
 			<a title="sticky business" href="sticky-business/index.html" target="iframe_a"><img src="sticky-business/cover.png" tabindex="0"></a>
 		</div>
-		<div class="filterDiv cat fav finished single adv">
+		<div class="filterDiv cat fav finished adv">
 			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv single sim finished fav">
+		<div class="filterDiv sim finished fav">
 			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.png" tabindex="0"></a>
 		</div>
-		<div class="filterDiv single sim current notdone">
+		<div class="filterDiv sim current notdone">
 			<a title="style savvy: styling star" href="style-savvy-styling-star/index.html" target="iframe_a"><img src="style-savvy-styling-star/cover.png" alt="style savvy styling star" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished single puzzle">
+		<div class="filterDiv finished puzzle">
 			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished action shooter single">
+		<div class="filterDiv finished action shooter">
 			<a title="watch dogs 2" href="watch-dogs-2/index.html" target="iframe_a"><img src="watch-dogs-2/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv vn finished">
 			<a title="we know the devil" href="we-know-the-devil/index.html" target="iframe_a"><img src="we-know-the-devil/cover.png" tabindex="0" alt="we know the devil"></a>
 		</div>
 		<!--
-		<div class="filterDiv finished horror single">
+		<div class="filterDiv finished horror">
 			<a title="" href="2wip/index.html" target="iframe_a">milk outside a bag of milk outside a bag of milk</a>
 		</div>
-		<div class="filterDiv toplay horror single">
+		<div class="filterDiv toplay horror">
 			<a title="" href="2wip/index.html" target="iframe_a">fatum betula</a>
 		</div>
-		<div class="filterDiv notdone fav single">
+		<div class="filterDiv notdone fav">
 			<a title="" href="2wip/index.html" target="iframe_a">yoshi's island</a>
 		</div>
-		<div class="filterDiv notdone puzzle single">
+		<div class="filterDiv notdone puzzle">
 			<a title="" href="2wip/index.html" target="iframe_a">inbento</a>
 		</div>
-		<div class="filterDiv notdone action single">
+		<div class="filterDiv notdone action">
 			<a title="" href="2wip/index.html" target="iframe_a">yakuza 0</a>
 		</div>
-		<div class="filterDiv fav finished horror card single">
+		<div class="filterDiv fav finished horror card">
 			<a title="" href="2wip/index.html" target="iframe_a">inscryption</a>
 		</div>
-		<div class="filterDiv sim notdone single">
+		<div class="filterDiv sim notdone">
 			<a title="" href="2wip/index.html" target="iframe_a">cozy grove</a>
 		</div>
-		<div class="filterDiv finished vn single">
+		<div class="filterDiv finished vn">
 			<a title="" href="2wip/index.html" target="iframe_a">we know the devil</a>
 		</div>
-		<div class="filterDiv notdone single">
+		<div class="filterDiv notdone">
 			<a title="" href="2wip/index.html" target="iframe_a">xenoblade chronicles</a>
 		</div>
-		<div class="filterDiv cat notdone single">
+		<div class="filterDiv cat notdone">
 			<a title="" href="2wip/index.html" target="iframe_a">catlateral damage: remeowstered</a>
 		</div>
-		<div class="filterDiv finished single rhythm">
+		<div class="filterDiv finished rhythm">
 			<a title="" href="2wip/index.html" target="iframe_a">sayonara wild hearts</a>
 		</div>
-		<div class="filterDiv finished single adventure">
+		<div class="filterDiv finished adventure">
 			<a title="" href="2wip/index.html" target="iframe_a">a short hike</a>
 		</div>
-		<div class="filterDiv finished single horror psychological">
+		<div class="filterDiv finished horror psychological">
 			<a title="" href="2wip/index.html" target="iframe_a">milk inside a bag of milk inside a bag of milk</a>
 		</div>
-		<div class="filterDiv finished single platform">
+		<div class="filterDiv finished platform">
 			<a title="" href="2wip/index.html" target="iframe_a">dead cells</a>
 		</div>
-		<div class="filterDiv finished single sim adventure">
+		<div class="filterDiv finished sim adventure">
 			<a title="" href="2wip/index.html" target="iframe_a">spiritfarer</a>
 		</div>
 -->
@@ -274,6 +272,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 	<div id="home">
 		<a title="go back home" href="/"><img src="/!g/deco/enderspin.gif" width="auto" alt="go back home"></a>
 	</div>
+	<div id="top"><a title="go back to the top" href="#"><img src="/!g/gif/splat-gato.gif" alt="click to go back to the top"></a></div>
 	<script src="filter.js"></script>
 </body>
 
