--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -16,6 +16,13 @@
 	<style>
 		body {
 			background-image: url(bg.png);
+			background-attachment: fixed;
+			background-position: right;
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
 		}
 
 		main,
