--- a/doqmeat/vgs/cato/index.html
+++ b/doqmeat/vgs/cato/index.html
@@ -13,7 +13,34 @@
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
+	<style>
+		body {
+			background: url(bg.png);
+			background-attachment: fixed;
+			background-position: right;
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
 
+		main,
+		footer {
+			background: #ffffff;
+			color: rgb(116, 95, 81);
+		}
+
+		a {
+			background: white;
+			padding: 0 1px;
+		}
+
+		i {
+			padding: 0px 3px;
+			color: black;
+		}
+	</style>
 </head>
 
 <body>
@@ -21,11 +48,25 @@
 	<main>
 		<h2>cato: buttered cat</h2>
 		<img width="30%" class="cover" src="cover.jpg" alt="a black and white cat with a butter toast on top of it">
-		<div class="info"><b>release date: </b> 5 september 2024</div>
+		<div class="info"><b>release date: </b> 6 september 2024</div>
 		<div class="info"><b>developer: </b> Team Woll</div>
 		<div class="info"><b>genre/type: </b>platformer, CAT</div>
-		<div class="info"><b>link: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a>, <a href="https://twitter.com/Cato_TeamWoll" target="_blank">twitter</a></div>
+		<div class="info"><b>links: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a>, <a href="https://twitter.com/Cato_TeamWoll" target="_blank">twitter</a>, <a class="hide" href="https://x.com/Cato_TeamWoll/status/1820830940404273619" target="_blank">body bg credit</a></div>
 		<h3>logs</h3>
+		<p><span class="date">07.sep.24</span> <b>cato released yesterday!!!!</b> i rushed to get this game <small>which btw it's a small discount!</small> and finally play it! out of all the demos i've played in the past year, this game has been the one that i've been looking forward to the most! <img src="/!g/pix/cat-heart.gif" alt=""></p>
+		<figure><img src="240907 (1).jpg" alt="screenshot of cato" width="100%">
+			<figcaption>world 2 starting level</figcaption>
+		</figure>
+		<p>i have already beaten 1 world out 5. and the first world mostly consisted of the demo areas so now going into the 2nd world is going to be a real treat! nonetheless, i still had a lot of fun replaying the demo levels and i could notice they have made some tweaks here and there. oh and besides the tweaks there is an actual story to this game ?!?!? and the toast speaks to the cat too? did not see that coming but i'm here for it! <small>i'm gonna be quite honest and say i'm not very sure of what is happening...</small></p>
+		<figure>
+			<img src="240907 (2).jpg" alt="screenshot of cato" width="100%">
+			<figcaption>lore room. reminds me of <i>dead cells</i></figcaption>
+		</figure>
+		<p>the inclusion of secret skins you get by doing (optional)challenging puzzles or finding secrets is very nice too! there's skins for the toast as well</p>
+		<figure> <img src="240907 (3).jpg" alt="screenshot of cato" width="100%">
+			<figcaption>skin selection menu</figcaption>
+		</figure>
+		<hr>
 		<p><span class="date">17.jul.24</span>i finished the demo yesterday! there was surprisingly A LOT of levels that you could do! 24 to be exact. i fear i might be sounding like a broken record but guys................ i loved it. also the <span class="spoiler">last level was a bit special! it was so cool... </span> my god i really can't wait for this to come out!!!</p>
 		<hr>
 		<p><span class="date">15.jul.24</span> wow so i just updated the demo and it's sooo different from i first played it during summer of 2023!</p>
