--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,6 +34,9 @@
 			<!-- <article>
 				<p><b></b> </p>
 			</article> -->
+			<article id="240908">
+				<p><b>08.sep.24 - 12am</b> me and my mom always find a way to talk about my grandma. we joke about the things she would say to us if she was still here. we really miss her. i really miss her.</p>
+			</article>
 			<article>
 				<p><b>06.sep.24 - 2pm</b> i'm so excited to play <a href="/vgs/cato/index.html">cato</a> !!! <button onclick="showPic('!g/240906-cato.png','cato downloading on steam','ive already played 2 demos for this games and i loved them so much! im super hyped')">240906-cato.png'</button></p>
 			</article>
