button wall updated + minor changes

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -170,11 +170,12 @@
 			<a href="https://forks.neocities.org/" target="_blank"><img src="!g/forks.png" alt="forks"></a>
 			<a href="https://pysgodyn3.neocities.org/" target="_blank"><img src="!g/pysgodyn.png" alt="pysgodyn3"></a>
 			<a href="https://melody-nomas.neocities.org/" target="_blank"><img src="!g/melody.gif" alt="melody"></a>
-			<a href="https://soulbox.neocities.org" target="_blank"><img alt="soulbox" src="!g/soulbox.png">
-			</a>
+			<a href="https://soulbox.neocities.org" target="_blank"><img alt="soulbox" src="!g/soulbox.png"></a>
 			<a href="https://hazure03.neocities.org" target="_blank"><img src="!g/hazure03.gif" alt="hazure03"></a>
 			<a href="https://amalinalai.github.io/precipice/"><img src="!g/lina.gif" title="click to visit lina's home!" alt="lina's home!"></a>
 			<a href="https://skewbug.neocities.org/" target="_blank"><img src="!g/skewbug.gif" alt="skewbug"></a>
+			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
+			<a href="https://catbyte.site" target="_blank"><img src="!g/catbyte.png" alt="catbyte"></a>
 		</div>
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
