--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -21,17 +21,19 @@
 
 <body>
 	<div id="frame">
-		<h2>info</h2>
+		<h2>welcome...</h2>
+		<!-- <img src="!g/index/cat-dj.png" width="30%" align="left" style="margin:10px;border-radius:10px" alt="cat on a DJ scratcher">
+		<p>to my music page! dedicated to everything that i listen to and love <img src="/!g/pix/cat-heart.gif"></p> -->
 
 		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me! ♪(´▽｀)</p>
 
-		<p>i just wanna have a space where i can talk a lil bit about the stuff i like to listen to while also showcasing it as well.</p>
+		<p>i wanted to have a space where i can talk a little bit about the stuff i like to listen to while also showcasing it as well.</p>
 
 		<p>my headphones are the infamous <i>razer kraken kitty headset</i> <small>they are honestly great tbh...</small> and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a>! <small><a title="img of music player" href="https://doqmeat.com/microblog/!g/240710-musicplayer.jpg" target="_blank">look how cute...</a></small></p>
 
-		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the CD. if not, i'll get it digitally.</p>
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a>. if not, i'll get it digitally.</p>
 
-		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> !!! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
+		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> or my <a href="" target="_blank" class="outlink">rate your music</a> ! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
