new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,6 +34,10 @@
 			<!-- <article>
 				<p><b></b> </p>
 			</article> -->
+
+			<article>
+				<p><b>10.sep.24 - 7pm</b> i have a tiny plot in front of my apartment and today i bought some plants for it! <button onclick="showPic('!g/240910-garden.png','a little garden', 'i forgot the names of the plants... lmk if YOU know!')">240910-garden.png</button></p>
+			</article>
 			<article id="240908">
 				<p><b>08.sep.24 - 12am</b> me and my mom always find a way to talk about my grandma. we joke about the things she would say to us if she was still here. we really miss her. i really miss her.</p>
 			</article>
