--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -125,10 +125,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-styling-star/">style savvy styling star</a> + <a href="/vgs/cato/index.html">cato</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> grace and frankie</p>
+			<p><span class="hl">watching:</span> the queen's gambit</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> remaking music page</p>
-			<p class="date">last updated on 07.sep.24</p>
+			<p class="date">last updated on 14.sep.24</p>
 
 		</div>
 
