--- a/doqmeat/journal/logs.html
+++ b/doqmeat/journal/logs.html
@@ -26,7 +26,8 @@
 		<h1 class="hide">all journal logs</h1>
 		<article>
 			<ul>
-				<li>01.sep.24 - <a href="2024/09.html#1" target="log">from brackets to VSC</a></li>
+				<li>14.sep.24 - <a href="2024/09.html#14">gardening era</a></li>
+				<li>01.sep.24 - <a href="2024/09.html#1">from brackets to VSC</a></li>
 				<li>22.aug.24 - <a href="2024/08.html#13">storm update + compsci class</a></li>
 				<li>13.aug.24 - <a href="2024/08.html#13">tropical storm</a></li>
 				<li>31.jul.24 - <a href="2024/07.html#31">employment era</a></li>
