--- a/doqmeat/collection/plushies/index.html
+++ b/doqmeat/collection/plushies/index.html
@@ -24,6 +24,19 @@
 	<main>
 		<!--	COLUMN 1-->
 		<div class="column">
+
+			<div class="plush one">
+				<div class="images">
+					<img src="!g/seth.png" alt="seth plushie front">
+					<img src="!g/seth-2.png" alt="seth plushie back">
+				</div>
+				<div class="desc">
+					<h2>seth</h2>
+					<p>i can't believe this motherfucker's name is seth. bought him with my employee discount on my first day at the job. i love how cute he is though. a little sashimi guy.</p>
+					<p><b>brand:</b> bum bumz</p>
+				</div>
+			</div>
+
 			<div class="plush two">
 				<div class="images">
 					<img src="!g/ralsei.png">
@@ -134,7 +147,7 @@
 					<img src="!g/charlie-2.png">
 				</div>
 				<div class="desc">
-					<h2>charley cheetah</h2>
+					<h2>charlie cheetah</h2>
 					<p>bought from my visit to disney's animal kingdom. his tag name says he is called <b>charlie cheetah</b> so i always went with that name! i always call him "charley" though.</p>
 					<p>he is one of the most huggable plushies i own! he is quite honestly so perfect for cuddling. i love him a lot.</p>
 					<p><b>brand:</b> jellycat</p>
@@ -222,7 +235,7 @@
 
 	</main>
 	<footer>
-		<p><b>last updated on 18.may.24</b></p>
+		<p><b>last updated on 16.sep.24</b></p>
 		<p><img src="favicon.gif"> <a href="/">home</a> / <a href="/collection/index.html">collections</a> / <a href="/sitemap.html">sitemap</a> <img src="favicon.gif"></p>
 		<p><b>credit:</b> body bg pic by <a href="https://unsplash.com/@myshegotripped?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mandy Dolan</a> on <a href="https://unsplash.com/photos/a-pile-of-stuffed-animals-sitting-next-to-each-other-01gHSXwbCUQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="/notebook/links/fonts.html">fonts</a> used: momo, gaegu
 		</p>
