moved n renamed some files

--- a/doqmeat/projects/learning-js/index.html
+++ b/doqmeat/projects/learning-js/index.html
@@ -33,18 +33,20 @@
 		<h2>navigation</h2>
 		<nav>
 			<ul>
-				<li><a href="smarter-way-js.html">a smarter way to learn JS</a> - taking notes as i read through it.</li>
+				<li><a href="smarter-way/index.html">a smarter way to learn JS</a> - taking notes as i read through it.</li>
 				<li><a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG</li>
 				<li><a href="practice.html">practice page</a> - where i put what i've learned into practice.</li>
+				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript" class="outlink" target="_blank">mozilla's learn JS</a></li>
 			</ul>
 		</nav>
 
 		<h2>JS to-do list</h2>
 		<ul>
-			<li>have different themes that stay selected on reload</li>
+			<li><s>have different themes that stay selected on reload</s> i've done this but i know there's a more efficent way of doing it...</li>
 			<li>how to filter classes</li>
 			<li><s>img modal pop up?</s></li>
 			<li>how to have stuff loaded randomly</li>
+			<li>do XML file to HTML with JS</li>
 		</ul>
 	</main>
 
