--- a/doqmeat/projects/learning-js/practice.html
+++ b/doqmeat/projects/learning-js/practice.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet">
 	<link href="../body.css" rel="stylesheet">
-	<link href="box.css" rel="stylesheet">
+	<link href="files/box.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
@@ -26,7 +26,6 @@
 		p img {
 			max-height: 273px;
 		}
-
 	</style>
 </head>
 
@@ -43,7 +42,6 @@
 			<option selected>what style should the box be???</option>
 			<option onclick="toggleDark()">dark</option>
 			<option onclick="toggleCat()">cat</option>
-			<option>ourple</option>
 		</select>
 
 		<div id="box" class="">
@@ -150,7 +148,7 @@ function reallyMeow() {
 		<br>
 		<a href="/projects/learning-js/index.html">learning JS</a> / <a href="/projects/index.html">projects</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
-	<script src="practice.js"></script>
+	<script src="files/practice.js"></script>
 </body>
 
 </html>
