--- a/doqmeat/projects/learning-js/practice.html
+++ b/doqmeat/projects/learning-js/practice.html
@@ -30,9 +30,10 @@
 </head>
 
 <body>
-	<h1>practice page</h1>
+	<h1>thoughts and practice zone</h1>
 	<main>
-
+		<!-- write about yukika passport  -->
+		<hr>
 		<p>figured out how to do a box pop up and a img modal of sorts! i put a class tag on all that imgs where if you click them then i take the <code>src</code> and <code>alt</code> text into the img modal. you can check it out on the scans page of my <a title="currently a WIP!" href="https://siinamota.doqmeat.com/scans/" target="_blank" class="outlink">siinamota fansite</a>. i also use a similar thing for the imgs on my <a href="/microblog">microblog</a> but with a different method.</p>
 		<p>also learning how to use this bit of code with the examples mentioned above <br><code>i = 0; i &lt; example.length; i++</code></p>
 
@@ -44,7 +45,7 @@
 			<option onclick="toggleCat()">cat</option>
 		</select>
 
-		<div id="box" class="">
+		<div id="box">
 			<p>hi this is inside a box! </p>
 			<p>this is a <a href="/">link</a>. this is <b>bolded</b>. this is <i>italics</i>. this is <mark>highlighted</mark></p>
 		</div>
