--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -108,7 +108,7 @@
 		<li><a href="https://solarpunk.cool/zines/web-zine-01/table-of-contents.html" target="_blank">web zine 01</a> - zine about making a website from scratch!</li>
 
 		<h3 id="js">javascript</h3>
-		<li><a href="https://javascript-compressor.com/" target="_blank">JS compressor</a> - compresses file sizes!</li>
+		<li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript" target="_blank">mozilla's learn javascript</a></li>
 		<li><a href="https://javascript.info/" target="_blank">javascript.info</a></li>
 		<li><a href="https://aparrish.neocities.org/simple-interactivity" target="_blank">simple interactivity with jQuery</a></li>
 		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a></li>
@@ -116,6 +116,7 @@
 		<li><a href="https://www.freecodecamp.org" target="_blank">freecodecamp</a> - courses and projects for you to learn responsive web design, basic javascript, and much more!</li>
 		<li><a href="https://www.theodinproject.com/" target="_blank">the odin project</a></li>
 		<li><a href="http://www.mf2fm.com/rv/" target="_blank">RV's free JS effects</a> for your site! includes text, cursor, and screen effects!</li>
+		<li><a href="https://javascript-compressor.com/" target="_blank">JS compressor</a> - compresses file sizes!</li>
 
 		<h3 id="css">CSS</h3>
 		<li><a href="https://css-pattern.com/graph-paper/" target="_blank">CSS patterns</a></li>
